# b3-crawler

./: .gitignore  README.md  base.json  main.py  pyproject.toml  tmp.ipynb  todas.json
b3/: crawler.py  utils.py
