[tool.poetry]
name = "b3"
version = "0.1.0"
description = "a crawler"
authors = ["Maicon-g14"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.25.2"
pandas = "^2.1.4"
tqdm = "^4.66.1"
pydantic = "^2.5.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
